Fixed styling issues with my technologies on mobile

--- a/anastasia-portfolio2/styles.css
+++ b/anastasia-portfolio2/styles.css
@@ -364,7 +364,13 @@ flex-direction: column;
 }
 
 @media screen and (max-width: 900px) {
+    .my-tech-container{
+        display: none;
+    }
 
+    .my-tech-header{
+        display: none;
+    }
 
 .tech-container{
     display: none;
